<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/hfpclient_connect"
    tools:context="cy.app.bt.hfpclient.cyphon.HfpClientMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/signal"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/stat_signal" />
        <ImageView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="top"
            android:src="@drawable/stat_battery" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:visibility="visible"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/subscriberInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:visibility="visible"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/wbsStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:visibility="visible"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/inbandStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:visibility="visible"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titletext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/displaynumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:visibility="visible" />
        <ListView
            android:id="@+id/call_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textSize="10sp">
        </ListView>
        <TextView
            android:id="@+id/enternumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_number"
            android:textSize="15dp"
            android:visibility="invisible" />
        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:visibility="invisible" />
        <Button
            android:id="@+id/dial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dial"
            android:textSize="15dp"
            android:visibility="invisible" />
        <Button
            android:id="@+id/redial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redial"
            android:textSize="15dp"
            android:visibility="invisible" />
        <Button
            android:id="@+id/call_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:visibility="invisible" />
        <Button
            android:id="@+id/enhanced_call_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:textSize="18dp"
            android:visibility="invisible"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/endcall_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endcall"
            android:textSize="18dp"
            android:visibility="invisible"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/vr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:visibility="visible"
            android:layout_weight="1"/>
    </LinearLayout>
</FrameLayout>
